@@ -80,11 +80,11 @@ function groups_admin_groups_remove_submit() {
 		wp_die( esc_html__( 'Access denied.', 'groups' ) );
 	}
 
-	if ( !wp_verify_nonce( $_POST[GROUPS_ADMIN_GROUPS_NONCE], 'groups-remove' ) ) { // phpcs:ignore WordPress.Security.ValidatedSanitizedInput.InputNotSanitized
+	if ( !groups_verify_post_nonce( GROUPS_ADMIN_GROUPS_NONCE, 'groups-remove' ) ) {
 		wp_die( esc_html__( 'Access denied.', 'groups' ) );
 	}
 
-	$group_id = isset( $_POST['group-id-field'] ) ? $_POST['group-id-field'] : null; // phpcs:ignore WordPress.Security.ValidatedSanitizedInput.InputNotSanitized
+	$group_id = groups_sanitize_post( 'group-id-field' );
 	$group = Groups_Group::read( $group_id );
 	if ( $group ) {
 		if ( $group->name !== Groups_Registered::REGISTERED_GROUP_NAME ) {
@@ -105,7 +105,7 @@ function groups_admin_groups_bulk_remove() {
 		wp_die( esc_html__( 'Access denied.', 'groups' ) );
 	}
 
-	$group_ids = isset( $_POST['group_ids'] ) ? $_POST['group_ids'] : null; // phpcs:ignore WordPress.Security.ValidatedSanitizedInput.InputNotSanitized
+	$group_ids = groups_sanitize_post( 'group_ids' );
 	if ( $group_ids === null || !is_array( $group_ids ) ) {
 		wp_die( esc_html__( 'No such groups.', 'groups' ) );
 	}
@@ -169,11 +169,11 @@ function groups_admin_groups_bulk_remove_submit() {
 		wp_die( esc_html__( 'Access denied.', 'groups' ) );
 	}
 
-	if ( !wp_verify_nonce( $_POST[GROUPS_ADMIN_GROUPS_ACTION_NONCE], 'admin' ) ) { // phpcs:ignore WordPress.Security.ValidatedSanitizedInput.InputNotSanitized
+	if ( !groups_verify_post_nonce( GROUPS_ADMIN_GROUPS_ACTION_NONCE, 'admin' ) ) {
 		wp_die( esc_html__( 'Access denied.', 'groups' ) );
 	}
 
-	$group_ids = isset( $_POST['group_ids'] ) ? $_POST['group_ids'] : null; // phpcs:ignore WordPress.Security.ValidatedSanitizedInput.InputNotSanitized
+	$group_ids = groups_sanitize_post( 'group_ids' );
 	if ( $group_ids !== null && is_array( $group_ids ) ) {
 		foreach ( $group_ids as $group_id ) {
 			$group = Groups_Group::read( $group_id );
