@@ -24,6 +24,7 @@
 * Dev - Revised pagination processing sanitation to use own API functions.
 * Dev - Validation hints for WordPress.Security.ValidatedSanitizedInput.InputNotSanitized.
 * Dev - Revised access meta box sanitation to use own API functions.
+* Dev - Revised groups admin screens sanitation to use own API funtions.
 
 2026-01-05 - version 3.10.0
 * Update - WordPress 6.9 compatible.
